--- a/_posts/2125-12-25-New-Day.md
+++ b/_posts/2125-12-25-New-Day.md
@@ -1,4 +1,11 @@
 ---
-title: FUCK YOU
+title: Memory0
 published: true
 ---
+
+# 2 minutes rule
+* Try to do sth 2 mins first.After that,whatever you want.
+* If a thing take you less than 2 mins, so to finish it.
+
+That is the most meaningful thing I learnd today.
+And it may make sense, so you can have a try if you feel meaningfuless.
