--- a/_posts/2025-12-26-Memory0.md
+++ b/_posts/2025-12-26-Memory0.md
@@ -3,9 +3,13 @@ title: Memory0
 published: true
 ---
 
-# 2 minutes rule
+***
+
+## 2 minutes rule
 * Try to do sth 2 mins first.After that,whatever you want.
 * If a thing take you less than 2 mins, so to finish it.
+
+* * *
 
 That is the most meaningful thing I learnd today.
 And it may make sense, so you can have a try if you feel meaningfuless.
