--- a/_posts/2025-12-26-Memory0.md
+++ b/_posts/2025-12-26-Memory0.md
@@ -8,6 +8,7 @@ published: true
 ## 2 minutes rule
 * Try to do sth 2 mins first.After that,whatever you want.
 * If a thing take you less than 2 mins, so to finish it.
+* Don't try sth addicted more than 2 mins or you just want to relax.
 
 ***
 
