--- a/_posts/2025-12-27-Memory1.md
+++ b/_posts/2025-12-27-Memory1.md
@@ -5,7 +5,7 @@ published: true
 
 ***
 
-## FUN THING
+## Fun thing
 Today I watch the symphony by the Vienna Royal Symphony Orchestra.I booked it long time ago with high expection.(Cause it was "ROYAL" hh).
 
 And thing goes as well,arriving at the Guangzhou Beilei Theatre in time,with the fulled venue.The symphony was good, the performers were good and
@@ -18,7 +18,7 @@ However, it is a royal experiment for me.
 
 ***
 
-## FINDING
+## Finding
 A new 2 mins rule was dig out today.
 
 ENJOY IT [2 mins rule](Memory0)
