--- a/_posts/2025-12-28-竹林中.md
+++ b/_posts/2025-12-28-竹林中.md
@@ -57,6 +57,16 @@ presented: True
 **路人的绝对证据**
 * 环境：竹子落叶到处都是，明显有激烈打斗痕迹
 * 死者：丈夫躺在杉树根附近，只有心脏处有贯穿伤口
-* 物品：绳子在杉树跟那，一把梳子 
+* 物品：绳子在杉树跟那，一把梳子
+
+**僧人的目击**
+* 丈夫有20多支箭
+
+**抓捕强盗的人**
+* 箭筒有17支箭
+
+**妻子的母亲**
+* 妻子是刚烈之人
+* 丈夫是一名武士（家从），性格温和
 
 
