--- a/_posts/2025-12-28-竹林中.md
+++ b/_posts/2025-12-28-竹林中.md
@@ -34,10 +34,11 @@ presented: True
 * 妻子说：妻子的护身匕首
 * 丈夫说：妻子的护身匕首
 
-**丈夫死后**
-* 强盗说：妻子悄悄跑了
-* 妻子说：妻子没跑
-* 丈夫说：妻子飞快地跑了
+**丈夫尸体位置**
+* 强盗说：未知（大概率不在杉树跟旁边）
+* 妻子说：在杉树跟旁边
+* 丈夫说：在杉树跟旁边
+* 路人说：**在杉树跟旁边**
 
 **丈夫绳子怎么解开的**
 * 强盗说：强盗解开的
@@ -53,6 +54,11 @@ presented: True
 * 强盗说：杀死丈夫（强盗与丈夫光明正大对决）
 * 妻子说：强盗走了
 * 丈夫说：杀死丈夫（强盗同情丈夫，没有动手）
+
+**妻子逃跑**
+* 强盗说：趁强盗与丈夫打斗时，妻子悄悄跑了
+* 妻子说：强盗踢倒妻子，妻子没跑
+* 丈夫说：趁强盗与丈夫商量杀不杀妻子时，妻子飞快地跑了
 
 **路人的绝对证据**
 * 环境：竹子落叶到处都是，明显有激烈打斗痕迹
