--- a/_posts/2025-12-28-竹林中.md
+++ b/_posts/2025-12-28-竹林中.md
@@ -75,6 +75,15 @@ presented: True
 * 妻子是刚烈之人
 * 丈夫是一名武士（家从），性格温和
 
+**各人处境**
+* 强盗：即将处死
+* 妻子：失去贞洁
+* 丈夫：已死，只求颜面
+* 妻子母亲：爱女心切
+* 路人：纯路人
+* 僧人：纯路人
+* 捕者：因抓捕强盗获得奖赏 
+
 **疑点**
 * 妻子的护身匕首去哪了
 * 梳子为什么在现场
